# Cpp-Pokemon-Card-Game

tp1_Pokemon_Card/: CMakeLists.txt  main
tp2_Series_Temporelles/: CMakeLists.txt  DTW.cpp  DTW.h  Distances.cpp  Distances.h  Euclidean.cpp  Euclidean.h  GaussianGenerator.cpp  GaussianGenerator.h  KNN.cpp  KNN.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h  main.cpp
tp_Zoo/: Animal.cpp  Animal.h  Bird.cpp  Bird.h  CMakeLists.txt  KNN.h  KNNDouble.cpp  KNNDouble.h  KNNString.cpp  KNNString.h  Mammal.cpp  Mammal.h  Reptile.cpp  Reptile.h  Zoo.cpp  Zoo.h  main.cpp
